--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -473,6 +473,8 @@
 
 </div>
 
+<div> Prueba </div>
+
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
